--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,15 +5,29 @@
         "context": ".."
     },
     "extensions": [
+        "davidanson.vscode-markdownlint",
+        "docsmsft.docs-markdown",
+        "docsmsft.docs-yaml",
+        "ms-azuretools.vscode-docker",
         "ms-python.python",
         "ms-python.vscode-pylance",
-        "ms-azuretools.vscode-docker"
+        "redhat.vscode-yaml"
     ],
     "settings": {
-        "python.analysis.useImportHeuristic": true,
+        "#terminal.integrated.defaultProfile.linux#": "/bin/bash",
+        "[yaml]": {
+            "editor.insertSpaces": true,
+            "editor.tabSize": 2,
+            "editor.autoIndent": "keep",
+            "editor.quickSuggestions": {
+                "other": true,
+                "comments": false,
+                "strings": true
+            }
+        },
         "python.pythonPath": "/usr/local/bin/python3",
         "python.formatting.provider": "autopep8",
         "python.linting.enabled": true,
-        "python.linting.flake8Enabled": true,
+        "python.linting.flake8Enabled": true
     }
 }
