Update PYTHONPATH ENV value

--- a/.github/workflows/code_testing.yml
+++ b/.github/workflows/code_testing.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      PYTHONPATH: /~.
+      PYTHONPATH: ./
 
     steps:
       # Checkout repository code
