--- a/.github/workflows/code_lint_and_test.yml
+++ b/.github/workflows/code_lint_and_test.yml
@@ -22,6 +22,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      # Static code analysis with bandit
+      - name: Static code analysis with bandit
+        run: |
+          bandit -rc .bandit.yml .
+
+      # Install testing packages
+      - name: Install test packages
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements/requirements.txt
+
       # Lint Python files with flake8
       - name: Lint Python files with flake8
         run: |
@@ -31,11 +42,6 @@ jobs:
       - name: Lint YAML files yamllint
         run: |
           yamllint .
-
-      # Static code analysis with bandit
-      - name: Static code analysis with bandit
-        run: |
-          bandit -rc .bandit.yml .
 
       # Lint markdown files
       # markdownlint-cli action documentation
