--- a/.github/workflows/code_lint_and_test.yml
+++ b/.github/workflows/code_lint_and_test.yml
@@ -86,6 +86,7 @@ jobs:
       - testing
 
     env:
+      MODULE_NAME: namedtuple_maker
       PACKAGE_NAME: namedtuple-maker
 
     steps:
@@ -93,4 +94,8 @@ jobs:
       - name: Install Python package with pip
         run: |
           pip install ${{ env.PACKAGE_NAME }}
-          python -c "import bleh"
+
+      # Test package module import
+      - name: Test package module import
+        run: |
+          python -c "from ${{ env.MODULE_NAME }} import ${{ env.MODULE_NAME }}"
