--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,15 +5,16 @@
         "context": ".."
     },
     "extensions": [
-        "davidanson.vscode-markdownlint",
-        "docsmsft.docs-markdown",
-        "docsmsft.docs-yaml",
-        "ms-azuretools.vscode-docker",
-        "ms-python.python",
-        "ms-python.vscode-pylance",
-        "redhat.vscode-yaml",
-        "streetsidesoftware.code-spell-checker"
-    ],
+		"davidanson.vscode-markdownlint",
+		"docsmsft.docs-markdown",
+		"docsmsft.docs-yaml",
+        "github.vscode-pull-request-github",
+		"ms-azuretools.vscode-docker",
+		"ms-python.python",
+		"ms-python.vscode-pylance",
+		"redhat.vscode-yaml",
+		"streetsidesoftware.code-spell-checker",
+	],
     "settings": {
         "#terminal.integrated.defaultProfile.linux#": "/bin/bash",
         "[yaml]": {
