--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 		"ms-python.python",
 		"ms-python.vscode-pylance",
 		"redhat.vscode-yaml",
-		"streetsidesoftware.code-spell-checker",
+		"streetsidesoftware.code-spell-checker"
 	],
     "settings": {
         "#terminal.integrated.defaultProfile.linux#": "/bin/bash",
