--- a/.bettercodehub.yml
+++ b/.bettercodehub.yml
@@ -2,5 +2,7 @@
 # Reference - https://bettercodehub.com/docs/configuration-manual
 
 ---
+component_depth: 1
+# default_excludes: true
 languages:
-  - python
+- python
